Test the services and resolve small bugs
Test the whole system
Remove CSS generated spaces and insert real space between links and bold text
Scroll up when booking form state change
Check what went wrong with CORS
Gray backgrounds behind notification panels are messed up

--- a/src/app/booking/booking.component.sass
+++ b/src/app/booking/booking.component.sass
@@ -275,8 +275,6 @@ h1
     margin-bottom: 15px
   p
     margin-bottom: 15px
-  b
-    margin-left: 5px
 .success
   i
     color: #2292A4
@@ -297,8 +295,8 @@ h1
   justify-content: center
   align-items: center
   position: absolute
-  width: 100%
-  height: 100%
+  width: inherit
+  height: inherit
   background: rgba(0,0,0,.25)
   z-index: 500
   .submit
@@ -321,8 +319,6 @@ input[type="checkbox"]
   margin-right: 10px
 
 a
-  margin-left: 3px
-  margin-right: 3px
   color: #ab6cc3
 
 a:visited
