--- a/src/app/delete-booking/delete-booking.component.sass
+++ b/src/app/delete-booking/delete-booking.component.sass
@@ -36,15 +36,11 @@
   justify-content: center
   align-items: center
   position: absolute
-  width: 100%
-  height: 100%
+  width: inherit
+  height: inherit
   background: rgba(0,0,0,.25)
-  z-index: 500
   .submit
     margin-top: 30px
-  b
-    margin-left: 5px
-    margin-right: 5px
   p
     font-size: 12px
 
@@ -143,8 +139,6 @@ input[type="checkbox"]
   margin-right: 10px
 
 a
-  margin-left: 3px
-  margin-right: 3px
   color: #ab6cc3
 
 a:visited
@@ -176,9 +170,6 @@ a:visited
 p
   margin-bottom: 5px
   font-size: 14px
-i
-  margin-left: 5px
-  margin-right: 5px
 
 .loading
   width: 100%
