--- a/src/app/delete-user-data/delete-user-data.component.sass
+++ b/src/app/delete-user-data/delete-user-data.component.sass
@@ -36,8 +36,8 @@
   justify-content: center
   align-items: center
   position: absolute
-  width: 100%
-  height: 100%
+  width: inherit
+  height: inherit
   background: rgba(0,0,0,.25)
   z-index: 500
   .submit
@@ -112,8 +112,6 @@ input[type="checkbox"]
   margin-right: 10px
 
 a
-  margin-left: 3px
-  margin-right: 3px
   color: #ab6cc3
 
 a:visited
@@ -145,9 +143,6 @@ a:visited
 p
   margin-bottom: 5px
   font-size: 14px
-i
-  margin-left: 5px
-  margin-right: 5px
 
 .loading
   width: 100%
